deploy/examples/oss.minienv.com/deployment-env-proxy.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: minienv-env-proxy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: minienv-env-proxy
  template:
    metadata:
      labels:
        name: minienv-env-proxy
    spec:
      containers:
        - name: minienv-env-proxy
          image: localhost:5000/minienv/minienv-proxy:0.2.0-DEV
          imagePullPolicy: Always
