deploy/examples/oss.minienv.com/deployment-probot.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: minienv-probot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: minienv-probot
  template:
    metadata:
      labels:
        name: minienv-probot
    spec:
      containers:
        - name: minienv-probot
          image: localhost:5000/minienv/minienv-probot:0.2.0-DEV
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
