deploy/examples/oss.minienv.com/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: minienv-api-service
spec:
  selector:
    app: minienv-api
  ports:
    - protocol: TCP
      port: 80
      name: "api"
      targetPort: 80
  type: ClusterIP
