deploy/examples/oss.minienv.com/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: minienv-web-service
spec:
  selector:
    app: minienv-web
  ports:
    - protocol: TCP
      port: 80
      name: "web"
      targetPort: 80
  type: ClusterIP
